dist/1.0/bin/sample/retrieveUnpackaged/objects/Lead_Country_Related_Data__c.object
<CustomObject>
    <fields>
        <fullName>DataType__c</fullName>
        <label>Data Type</label>
        <referenceTo>Country_Related_Data_Type__c</referenceTo>
        <relationshipLabel>Country Related Data</relationshipLabel>
        <relationshipName>Country_Related_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Country Related Data</relationshipLabel>
        <relationshipName>Country_Related_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Lead Country Related Data</label>
    <nameField>
        <displayFormat>LCRD{000000000}</displayFormat>
        <label>Lead Country Related Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Related Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EU_VAT_format_for_GB</fullName>
        <active>true</active>
        <description>Rule checking EU_Vat format for GB</description>
        <errorConditionFormula>IF (
AND (
NOT (ISBLANK (Value__c) ),
OR (CONTAINS (LEFT (Value__c , 4),&quot;GBHA&quot;),
CONTAINS (LEFT (Value__c , 4),&quot;GBGD&quot;) )
),

NOT (
IF (
LEN ( Value__c ) =7,
true, false)
),
False
)</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_format_for_IE</fullName>
        <active>true</active>
        <description>Rule validating EU VAT format for IE</description>
        <errorConditionFormula>IF (
AND (
NOT (ISBLANK (Value__c) ),
CONTAINS (LEFT (Value__c , 2),&quot;IE&quot;)
),
NOT (
IF (
LEN ( Value__c ) =10,
true, false)
),
False
)</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_format_for_RO</fullName>
        <active>true</active>
        <description>Validation of EU VAT for Romania</description>
        <errorConditionFormula>AND(
CONTAINS(LEFT ( Value__c , 2),&quot;RO&quot;), OR(
LEN(Value__c) &lt; 4,
LEN(Value__c) &gt; 12)
)</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_format_for_SK</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS(LEFT ( Value__c , 2),&quot;SK&quot;), LEN(Value__c) &lt;&gt; 12
)</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.
It should be SK0000000000 (SK prefix and 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_format_for_other_countries</fullName>
        <active>true</active>
        <description>Checking EU Vat format for: AT,BE,BG,CY,CZ,DK,EE,FI,FR,DE,EL,HU,IT,LV,LT,LU,MT,NL,PL,PT,SI,ES,SE,GB</description>
        <errorConditionFormula>IF (
AND (
NOT (ISBLANK (Value__c) ),
NOT (CONTAINS (LEFT (Value__c , 4),&quot;GBHA&quot;)),
NOT (CONTAINS (LEFT (Value__c , 4),&quot;GBGD&quot;)),
OR
(CONTAINS (LEFT (Value__c , 2),&quot;AT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;BE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;BG&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;CY&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;CZ&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;DK&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;EE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;FI&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;FR&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;DE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;EL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;HU&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;IT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LV&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LU&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;MT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;NL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;PL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;PT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;SI&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;ES&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;SE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;GB&quot;) )
),
NOT (IF (AND (LEN ( Value__c ) &lt;=14, LEN ( Value__c ) &gt;=10 ), true, false)
),False )</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_format_must_contain_country</fullName>
        <active>true</active>
        <description>Checks if VAt number begins with Country Prefix.</description>
        <errorConditionFormula>AND(DataType__r.Name = &apos;VAT Number&apos;, NOT( OR(CONTAINS (LEFT ( Value__c , 2),&quot;AT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;BE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;BG&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;CY&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;CZ&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;DK&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;EE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;FI&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;FR&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;DE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;EL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;HU&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;IT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LV&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;LU&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;MT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;NL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;PL&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;PT&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;RO&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;SK&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;SI&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;ES&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;SE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;IE&quot;),
CONTAINS (LEFT (Value__c , 2),&quot;GB&quot;) )
))</errorConditionFormula>
        <errorMessage>Vat Number must begin with country prefix eg.SK and be in EU VAT Format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_Id_Validation</fullName>
        <active>true</active>
        <description>Verifies format of Tax Id</description>
        <errorConditionFormula>AND(DataType__r.Name = &apos;Tax Identification Number&apos;,OR(NOT( LEN(Value__c ) = 10), NOT(REGEX(Value__c , &quot;[0-9]{10}&quot;))))</errorConditionFormula>
        <errorMessage>Tax Identification Number format is incorrect. It should be 10 digits</errorMessage>
    </validationRules>
</CustomObject>